create github pages

--- a/apropos.html
+++ b/apropos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  >
+<html >
 <head>
   
   <meta charset="UTF-8">
@@ -8,7 +8,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/-logo-seul-clab1.gif" type="image/x-icon">
   <meta name="description" content="Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous-même, à vos challenges quelque soit l'endroit où vous vous trouvez.">
-  
   <title>CoachingLAB.fr | A propos</title>
   <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
@@ -44,7 +43,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="home.html">
-                        <img src="assets/images/-logo-seul-clab1.gif" alt="" title="" style="height: 3.8rem;">
+                        <img src="assets/images/-logo-seul-clab1.gif" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 
@@ -219,7 +218,7 @@ pour accélérer votre réflexion et avancer rapidement</p>
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 75%;">
-                <img src="assets/images/1-wvqgs9f09wfjqpof1i-hfg-474x316.jpg" alt="" title="">
+                <img src="assets/images/1-wvqgs9f09wfjqpof1i-hfg-474x316.jpg" alt="Mobirise" title="">
             </div>
 
             <div class="media-content">
@@ -392,7 +391,7 @@ quelque soit l'endroit où vous vous trouvez.<br>
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="index.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
@@ -424,13 +423,12 @@ quelque soit l'endroit où vous vous trouvez.<br>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/dropdown/js/nav-dropdown.js"></script>
-  <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
