--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  >
+<html >
 <head>
   
   <meta charset="UTF-8">
@@ -10,7 +10,6 @@
   <meta name="description" content="Contactez moi
 sd.coach.succes@gmail.com
 au  07.69.74.63.90">
-  
   <title>CoachingLAB.fr | Contact</title>
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
@@ -46,7 +45,7 @@ au  07.69.74.63.90">
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="home.html">
-                        <img src="assets/images/-logo-seul-clab1.gif" alt="" title="" style="height: 3.8rem;">
+                        <img src="assets/images/-logo-seul-clab1.gif" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 
@@ -183,7 +182,7 @@ au  07.69.74.63.90">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Merci pour votre message.</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="O90+GRWT0gnqJMLauiB+Oydz7Fq3C/Lz0BNOyX7tXcfGd+id43H+BbGHS+HAqx9W6g9crF5zCieTjTQuQ053Abpml6ttDb+juK3xp3CYI1Avh5opodBczBu5l5rz24hy.YiIQ/BKbpGvU8zzRQXwkM37lmpq3/VGfXuhQ3C4W4wyHqglQTBIguTpkZeQ8s/AzgJ8T5byiMi2X8QVokMKq6VctxBQ/3OeUti9Q9vvXendyjhkpR1b5XwVwXdOFX0Pe">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6G/RCPgPuLb4o47uk9e5dTPC++fGYYJ8wss+8qTtpF31WFxpvVItdMwutjII6MMBrtviUuJwLsC9sK6uyhQKBvQXhm308x8Ms4B4prBIY7lyLIMuze9lsukodm84dq5A">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -242,7 +241,7 @@ au  07.69.74.63.90">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="index.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
@@ -275,13 +274,12 @@ au  07.69.74.63.90">
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/dropdown/js/nav-dropdown.js"></script>
-  <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
