--- a/entreprise.html
+++ b/entreprise.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  >
+<html >
 <head>
   
   <meta charset="UTF-8">
@@ -10,7 +10,6 @@
   <meta name="description" content="Un coaching sans égal, pour relever les défis d’aujourd’hui
 avec la plus grande exigence, anticiper les tendances
 pour innover et créer les succès futurs de votre entreprise .">
-  
   <title>CoachingLAB.fr | Entreprise</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
@@ -45,7 +44,7 @@ pour innover et créer les succès futurs de votre entreprise .">
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="home.html">
-                        <img src="assets/images/-logo-seul-clab1.gif" alt="" title="" style="height: 3.8rem;">
+                        <img src="assets/images/-logo-seul-clab1.gif" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 
@@ -94,7 +93,7 @@ pour innover et créer les succès futurs de votre entreprise .">
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 115%;">
-                <img src="assets/images/dollarphotoclub-85628728-min-323159-edited-1014x532.jpg" alt="" title="">
+                <img src="assets/images/dollarphotoclub-85628728-min-323159-edited-1014x532.jpg" alt="Mobirise" title="">
             </div>
 
             <div class="media-content">
@@ -247,7 +246,7 @@ Je propose un programme unique de coaching conseil dédié aux entreprises
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 145%;">
-                <img src="assets/images/sans-titre-cl-1014x444.jpg" alt="" title="">
+                <img src="assets/images/sans-titre-cl-1014x444.jpg" alt="Mobirise" title="">
             </div>
 
             <div class="media-content">
@@ -296,7 +295,7 @@ Je propose un programme unique de coaching conseil dédié aux entreprises
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="index.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
@@ -329,12 +328,11 @@ Je propose un programme unique de coaching conseil dédié aux entreprises
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/dropdown/js/nav-dropdown.js"></script>
-  <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
