--- a/essai.html
+++ b/essai.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  >
+<html >
 <head>
   
   <meta charset="UTF-8">
@@ -8,7 +8,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/-logo-seul-clab1.gif" type="image/x-icon">
   <meta name="description" content="Faisons le point sur votre situation">
-  
   <title>Réserver votre 1ère séance</title>
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
@@ -52,7 +51,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 60%;">
-                <img src="assets/images/rba-image-1118939.jpeg-1-1024x684-avec-logo-774x521.jpg" alt="" title="">
+                <img src="assets/images/rba-image-1118939.jpeg-1-1024x684-avec-logo-774x521.jpg" alt="Mobirise" title="">
             </div>
 
             <div class="media-content">
@@ -87,7 +86,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="home.html">
-                        <img src="assets/images/-logo-seul-clab1.gif" alt="" title="" style="height: 3.8rem;">
+                        <img src="assets/images/-logo-seul-clab1.gif" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 
@@ -108,13 +107,8 @@
 </section>
 
 <div id="custom-html-4r"><div id="TTE-c0ca4c36-fadb-4d8d-b20c-15911f7295e3"></div>
-<script src="https://d3saea0ftg7bjt.cloudfront.net/embed/js/embed.min.js"></script>
-<script>
-  window.TTE.init({
-    targetDivId: "TTE-c0ca4c36-fadb-4d8d-b20c-15911f7295e3",
-    uuid: "c0ca4c36-fadb-4d8d-b20c-15911f7295e3"
-  });
-</script></div>
+{JS_CODE_0}
+{JS_CODE_1}</div>
 
 <section class="mbr-section info1 cid-rdlEO1WCGn" id="info1-4u">
 
@@ -140,14 +134,13 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
-  <script src="assets/dropdown/js/nav-dropdown.js"></script>
-  <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
