--- a/personnel.html
+++ b/personnel.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  >
+<html >
 <head>
   
   <meta charset="UTF-8">
@@ -9,7 +9,6 @@
   <link rel="shortcut icon" href="assets/images/-logo-seul-clab1.gif" type="image/x-icon">
   <meta name="description" content="GAGNEZ en clarté sur votre situation actuelle !
 Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous-même, à vos challenges quelque soit l'endroit où vous vous trouvez.">
-  
   <title>CoachingLAB.fr | Personnel</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
@@ -44,7 +43,7 @@ Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="home.html">
-                        <img src="assets/images/-logo-seul-clab1.gif" alt="" title="" style="height: 3.8rem;">
+                        <img src="assets/images/-logo-seul-clab1.gif" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 
@@ -93,7 +92,7 @@ Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 90%;">
-                <img src="assets/images/istock-503028540-stretch-1-742x471.jpg" alt="" title="">
+                <img src="assets/images/istock-503028540-stretch-1-742x471.jpg" alt="Mobirise" title="">
             </div>
 
             <div class="media-content">
@@ -140,7 +139,7 @@ Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/tlchargement-243x208.png" alt="" title="">
+                        <img src="assets/images/tlchargement-243x208.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5"><strong>Bien Etre</strong></h4>
@@ -154,7 +153,7 @@ Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/tlchargement-243x208.png" alt="" title="">
+                        <img src="assets/images/tlchargement-243x208.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5"><strong>Atteinte des objectifs</strong></h4>
@@ -169,7 +168,7 @@ leurs réussites en fonction de vos besoins.</p>
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/tlchargement-243x208.png" alt="" title="">
+                        <img src="assets/images/tlchargement-243x208.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5"><strong>Votre productivité</strong></h4>
@@ -184,7 +183,7 @@ leurs réussites en fonction de vos besoins.</p>
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/tlchargement-243x208.png" alt="" title="">
+                        <img src="assets/images/tlchargement-243x208.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5"><strong>Votre confiance</strong></h4>
@@ -359,7 +358,7 @@ leurs réussites en fonction de vos besoins.</p>
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 100%;">
-                <img src="assets/images/sans-titre-cl-1014x444.jpg" alt="" title="">
+                <img src="assets/images/sans-titre-cl-1014x444.jpg" alt="Mobirise" title="">
             </div>
 
             <div class="media-content">
@@ -407,7 +406,7 @@ leurs réussites en fonction de vos besoins.</p>
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="index.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
@@ -440,12 +439,11 @@ leurs réussites en fonction de vos besoins.</p>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/dropdown/js/nav-dropdown.js"></script>
-  <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
