--- a/rdv.html
+++ b/rdv.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  >
+<html >
 <head>
   
   <meta charset="UTF-8">
@@ -8,7 +8,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/-logo-seul-clab1.gif" type="image/x-icon">
   <meta name="description" content="Continuez d'avancer sur votre situation">
-  
   <title>Prise de RDV</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
@@ -42,7 +41,7 @@
     
 </section>
 
-<div id="custom-html-8u"><a id="TTE-06865135-9630-44e1-bb5e-0e8272d31a03" href="https://10to8.com/book/haebht-free/" target="_blank">See Online Booking Page</a> <script src="https://d3saea0ftg7bjt.cloudfront.net/embed/js/embed.min.js"></script> <script> window.TTE.init({ targetDivId: "TTE-06865135-9630-44e1-bb5e-0e8272d31a03", uuid: "06865135-9630-44e1-bb5e-0e8272d31a03", }); </script></div>
+<div id="custom-html-8u"><a id="TTE-06865135-9630-44e1-bb5e-0e8272d31a03" href="https://10to8.com/book/haebht-free/" target="_blank">See Online Booking Page</a> {JS_CODE_0} {JS_CODE_1}</div>
 
 <section class="mbr-section info1 cid-reLHgGRL15" id="info1-8v">
 
@@ -72,7 +71,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
