--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html >
+<html  >
 <head>
   
   <meta charset="UTF-8">
@@ -10,6 +10,7 @@
   <meta name="description" content="Contactez moi
 sd.coach.succes@gmail.com
 au  07.69.74.63.90">
+  
   <title>CoachingLAB.fr | Contact</title>
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
@@ -45,7 +46,7 @@ au  07.69.74.63.90">
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="home.html">
-                        <img src="assets/images/-logo-seul-clab1.gif" alt="Mobirise" title="" style="height: 3.8rem;">
+                        <img src="assets/images/-logo-seul-clab1.gif" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 
@@ -182,7 +183,7 @@ au  07.69.74.63.90">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Merci pour votre message.</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tKO74x7Z1gc24lK8SSWoQ1LV3K41Ge2g51AzMQUyx/hogsGaXud560BM++8TZo6jLlw84WXYiDxRwk15tuYdyfpjP4K1ZxyPLJHdxpUSkZ690WS/g6scIywjhqbc6McM">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="60Z7v+Oe9i/kNUdeV8yLyY6X8ZtKpFHjSNQSooQN/3Vt7sVRzoyqZUeXJfKHLC/4M/JGeEJBKzfKR4AZgYF3dF+Gb43GPFffiudHYx9hrIu3K6xJStRzGkB8ccqax4mX.B5x+dbLqwyPp/Wzc1GHDnTemX6IYWq+2DPlX4d8/oSKDBIEMfH2XLquhDnQJmNvNbxy2txgd5GGy4XuFx9o2UZgmGOsjFeEiCKD7/v0TzguzXkwptqLRS7tiy2/gVsa1">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -241,7 +242,7 @@ au  07.69.74.63.90">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="index.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="Mobirise" title="">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="">
                     </a>
                 </div>
             </div>
@@ -274,7 +275,8 @@ au  07.69.74.63.90">
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/dropdown/js/nav-dropdown.js"></script>
+  <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
