create github pages

--- a/jeunesse.html
+++ b/jeunesse.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/-logo-seul-clab1.gif" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/-logo-seul-clab-final.gif" type="image/x-icon">
   <meta name="description" content="GAGNEZ en clarté sur votre situation actuelle !
 Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous-même, à vos challenges quelque soit l'endroit où vous vous trouvez.">
   
@@ -44,19 +44,19 @@ Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="home.html">
-                        <img src="assets/images/-logo-seul-clab1.gif" alt="" title="" style="height: 3.8rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="home.html">coachinglab.fr &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a>
-                </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="home.html"><span class="fa fa-home mbr-iconfont mbr-iconfont-btn"></span>&nbsp; &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="apropos.html">
+                    <a class="nav-link link text-secondary display-4" href="home.html">&nbsp;</a>
+                </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="index.html"><span class="fa fa-home mbr-iconfont mbr-iconfont-btn"></span>&nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="apropos.html">
                         A propos</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="home.html#header11-8m">
+                    <a class="nav-link link text-secondary display-4" href="index.html#header11-8m">
                         Comment ça marche ?</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="rdvno1.html">ESSAYER <br></a> <a class="btn btn-sm btn-success display-7" href="rdv.html">Réserver votre RDV</a></div>
@@ -102,7 +102,7 @@ Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous
                 <div class="mbr-section-text mbr-white pb-3 ">
                     <p class="mbr-text mbr-fonts-style display-4"><br>J'ai le plaisir de collaborer depuis plusieurs années avec des collégiens, lycéens, étudiants, jeunes diplomés pour les accompagner dans leur réussite.<br>Cette exépérience riche confirme chaque jour, la valeur d'un travail de coaching pour les étudiants et jeunes diplomés. Cela vous permet en effet de partir sur des bases solides, faites connaissance de vous-mêmes et d'outils pour appréhender les problématiques qui jalonnent votre vie.<br>Durant toute la scolarité, vous vivez un moment de la vie tout à fait particulier, unique qui peut vous sembler dramatiquement décifif, et pour lequel vous n'avez autour de vous, pour vous aider, que des personnes qui projettent énormément sur vous et dont certains ont en plus de&nbsp;<br>Je crois que nous pouvons survivre à ces défis, à ces traumatismes pour réhabiliter notre estime de soi, notre sérénité.<br>Le coaching permet de se projeter dans de nouvelles perspectives.<br><br><br></p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-7" href="rdvno1.html">&gt; COMMENCER</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-7" href="essai.html">&gt; COMMENCER</a>
                     <a class="btn btn-md btn-white-outline display-7" href="#">EN SAVOIR +</a></div>
             </div>
         </div>
@@ -445,7 +445,7 @@ leurs réussites en fonction de vos besoins.</p>
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
