--- a/apropos.html
+++ b/apropos.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/-logo-seul-clab1.gif" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/-logo-seul-clab-final.gif" type="image/x-icon">
   <meta name="description" content="Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous-même, à vos challenges quelque soit l'endroit où vous vous trouvez.">
   
   <title>CoachingLAB.fr | A propos</title>
@@ -44,19 +44,19 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="home.html">
-                        <img src="assets/images/-logo-seul-clab1.gif" alt="" title="" style="height: 3.8rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="home.html">coachinglab.fr &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a>
-                </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="home.html"><span class="fa fa-home mbr-iconfont mbr-iconfont-btn"></span>&nbsp; &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="apropos.html">
+                    <a class="nav-link link text-secondary display-4" href="home.html">&nbsp;</a>
+                </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="index.html"><span class="fa fa-home mbr-iconfont mbr-iconfont-btn"></span>&nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="apropos.html">
                         A propos</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="home.html#header11-8m">
+                    <a class="nav-link link text-secondary display-4" href="index.html#header11-8m">
                         Comment ça marche ?</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="rdvno1.html">ESSAYER <br></a> <a class="btn btn-sm btn-success display-7" href="rdv.html">Réserver votre RDV</a></div>
@@ -230,7 +230,7 @@ pour accélérer votre réflexion et avancer rapidement</p>
 quelque soit l'endroit où vous vous trouvez.<br>
 <br>Aussi appelé e-coaching, coaching à distance, web coaching, des études ont prouvé son efficacité au point de devenir une excellente alternative au séance en cabinet. A l'heure actuelle, il y a même des personnes qui auraient le temps de suivre des séances en cabinet, mais qui préférent les facilités d' une séance en ligne.<br><br></p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-7" href="rdvno1.html">&gt; COMMENCER MAINTENANT</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-7" href="essai.html">&gt; COMMENCER MAINTENANT</a>
                     <a class="btn btn-md btn-white-outline display-7" href="#">DÉMO LIVE</a></div>
             </div>
         </div>
@@ -371,7 +371,7 @@ quelque soit l'endroit où vous vous trouvez.<br>
     <div class="container">
         <div class="row main justify-content-center">
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-left py-4"><a class="btn btn-primary display-7" href="rdvno1.html">&gt; COMMENCEZ MAINTENANT <br>1er Séance GRATUITE</a></div>
+                <div class="mbr-section-btn align-left py-4"><a class="btn btn-primary display-7" href="essai.html">&gt; COMMENCEZ MAINTENANT <br>1er Séance GRATUITE</a></div>
             </div>
             <div class="media-container-column title col-12 col-lg-7 col-md-6">
                 <h2 class="align-right mbr-bold mbr-white pb-3 mbr-fonts-style display-2">&nbsp;Prêt pour commencer ?</h2>
@@ -430,7 +430,7 @@ quelque soit l'endroit où vous vous trouvez.<br>
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
