--- a/entreprise.html
+++ b/entreprise.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/-logo-seul-clab1.gif" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/-logo-seul-clab-final.gif" type="image/x-icon">
   <meta name="description" content="Un coaching sans égal, pour relever les défis d’aujourd’hui
 avec la plus grande exigence, anticiper les tendances
 pour innover et créer les succès futurs de votre entreprise .">
@@ -45,19 +45,19 @@ pour innover et créer les succès futurs de votre entreprise .">
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="home.html">
-                        <img src="assets/images/-logo-seul-clab1.gif" alt="" title="" style="height: 3.8rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="home.html">coachinglab.fr &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a>
-                </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="home.html"><span class="fa fa-home mbr-iconfont mbr-iconfont-btn"></span>&nbsp; &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="apropos.html">
+                    <a class="nav-link link text-secondary display-4" href="home.html">&nbsp;</a>
+                </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="index.html"><span class="fa fa-home mbr-iconfont mbr-iconfont-btn"></span>&nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="apropos.html">
                         A propos</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="home.html#header11-8m">
+                    <a class="nav-link link text-secondary display-4" href="index.html#header11-8m">
                         Comment ça marche ?</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="rdvno1.html">ESSAYER <br></a> <a class="btn btn-sm btn-success display-7" href="rdv.html">Réserver votre RDV</a></div>
@@ -104,7 +104,7 @@ pour innover et créer les succès futurs de votre entreprise .">
                     <p class="mbr-text mbr-fonts-style display-4"><br>Les défis pour les dirigeants, les entrepreneurs sont multiples.<br>Il y a la gestion quotidiennes des affaires,<br>tout en exécutant des projets majeurs et la motivation des équipes.<br>Au milieu de cette charge de travail écrasante,<br>il peut être difficile de rester concentré sur les objectifs à long terme
 et les opportunités de croissance à saisir.<br></p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-7" href="rdvno1.html">&gt; COMMENCER</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-7" href="essai.html">&gt; COMMENCER</a>
                     <a class="btn btn-md btn-white-outline display-7" href="#">EN SAVOIR +</a></div>
             </div>
         </div>
@@ -279,7 +279,7 @@ Je propose un programme unique de coaching conseil dédié aux entreprises
                 <h2 class="align-left mbr-bold mbr-fonts-style display-4"><span style="font-weight: normal;">Le coaching en ligne est un moyen pour un plus grand nombre de personnes de recevoir un service précieux d’une manière différente, qui correspond mieux à leurs besoins et à leurs attentes. Grace à la technologie nous obtenons plus facilement les résultats que nous voulons.</span></h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="rdvno1.html"><span class="mbri-touch-swipe mbr-iconfont mbr-iconfont-btn" style="font-size: 22px;"></span>ESSAYER MAINTENANT</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="essai.html"><span class="mbri-touch-swipe mbr-iconfont mbr-iconfont-btn" style="font-size: 22px;"></span>ESSAYER MAINTENANT</a></div>
             </div>
         </div>
     </div>
@@ -334,7 +334,7 @@ Je propose un programme unique de coaching conseil dédié aux entreprises
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
