--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/-logo-seul-clab1.gif" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/-logo-seul-clab-final.gif" type="image/x-icon">
   <meta name="description" content="Obtenez le soutien dont vous avez besoin.
 Nous sommes à vos cotés, où que vous soyez">
   
@@ -45,19 +45,19 @@ Nous sommes à vos cotés, où que vous soyez">
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="home.html">
-                        <img src="assets/images/-logo-seul-clab1.gif" alt="" title="" style="height: 3.8rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="home.html">coachinglab.fr &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a>
-                </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="home.html"><span class="fa fa-home mbr-iconfont mbr-iconfont-btn"></span>&nbsp; &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="apropos.html">
+                    <a class="nav-link link text-secondary display-4" href="home.html">&nbsp;</a>
+                </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="index.html"><span class="fa fa-home mbr-iconfont mbr-iconfont-btn"></span>&nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="apropos.html">
                         A propos</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="home.html#header11-8m">
+                    <a class="nav-link link text-secondary display-4" href="index.html#header11-8m">
                         Comment ça marche ?</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="rdvno1.html">ESSAYER <br></a> <a class="btn btn-sm btn-success display-7" href="rdv.html">Réserver votre RDV</a></div>
@@ -90,8 +90,8 @@ Nous sommes à vos cotés, où que vous soyez">
 <br>
 <br>En tant que coach, je vous accompagne à des moments clés, pour redéfinir vos priorités, évoluer, construire vos projets, atteindre vos objectifs et surtout croire en vos rêves.<br></p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-7" href="rdvno1.html">&gt; Commencez maintenant<br>1ère Séance GRATUITE<br></a>
-                    <a class="btn btn-md btn-white-outline display-7" href="contact.html">EN SAVOIR +</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-7" href="essai.html">&gt; Commencez maintenant<br>1ère Séance GRATUITE<br></a>
+                    <a class="btn btn-md btn-white-outline display-7" href="contact .html">EN SAVOIR +</a></div>
             </div>
         </div>
     </div>
@@ -552,7 +552,7 @@ pour réaliser vos ambitions avec passion.<br></p>
 <br>pendant vos pauses au bureau,<br>en déplacement,<br>ou même lorsque vous êtes en vacances.<br>
 <br><strong>DONNEZ VOUS DU TEMPS POUR VOUS</strong></p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-7" href="rdvno1.html">&gt; COMMENCEZ MAINTENANT<br>1ère Séance GRATUITE<br></a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-7" href="essai.html">&gt; COMMENCEZ MAINTENANT<br>1ère Séance GRATUITE<br></a>
                     <a class="btn btn-md btn-white-outline display-7" href="#">DÉMO LIVE</a></div>
             </div>
         </div>
@@ -653,21 +653,21 @@ pour réaliser vos ambitions avec passion.<br></p>
 
             <div class="card  col-12 col-md-6 col-lg-4">
                 <div class="card-img">
-                    <span class="mbr-iconfont mbri-responsive" style="color: rgb(0, 166, 237); fill: rgb(0, 166, 237);"></span>
+                    <span class="mbr-iconfont mbri-responsive" style="color: rgb(0, 166, 237); fill: rgb(0, 166, 237); font-size: 90px;"></span>
                 </div>
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-5"><strong>
                         PLANIFIER VOTRE 1ere SEANCE</strong></h4>
                     <p class="mbr-text mbr-fonts-style display-7"><br>GRATUITE
                     </p>
-                    <div class="mbr-section-btn text-center"><a href="rdvno1.html" class="btn btn-secondary display-7">
+                    <div class="mbr-section-btn text-center"><a href="essai.html" class="btn btn-secondary display-7">
                             COMMENCEZ AUJOURD'HUI</a></div>
                 </div>
             </div>
 
             <div class="card  col-12 col-md-6 col-lg-4">
                 <div class="card-img">
-                    <span class="mbr-iconfont mbri-rocket" style="color: rgb(0, 166, 237); fill: rgb(0, 166, 237);"></span>
+                    <span class="mbr-iconfont mbri-rocket" style="color: rgb(0, 166, 237); fill: rgb(0, 166, 237); font-size: 90px;"></span>
                 </div>
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-5"><strong>ENSEMBLE NOUS DEFINIRONS
@@ -675,20 +675,20 @@ pour réaliser vos ambitions avec passion.<br></p>
                     <p class="mbr-text mbr-fonts-style display-7">
                        CONSULTATION / DIAGNOSTIC<br>
                     </p>
-                    <div class="mbr-section-btn text-center"><a href="home.html#header11-76" class="btn btn-secondary display-7">
+                    <div class="mbr-section-btn text-center"><a href="index.html#header11-76" class="btn btn-secondary display-7">
                             EN SAVOIR +</a></div>
                 </div>
             </div>
 
             <div class="card  col-12 col-md-6 col-lg-4">
                 <div class="card-img">
-                    <span class="mbr-iconfont mbri-globe-2" style="color: rgb(0, 166, 237); fill: rgb(0, 166, 237);"></span>
+                    <span class="mbr-iconfont mbri-globe-2" style="color: rgb(0, 166, 237); fill: rgb(0, 166, 237); font-size: 90px;"></span>
                 </div>
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-5"><strong>OUVRER VOTRE AVENIR
 </strong><div><br></div></h4>
                     <p class="mbr-text mbr-fonts-style display-7">à de nouvelles perspectives<br></p>
-                    <div class="mbr-section-btn text-center"><a href="page9.html" class="btn btn-secondary display-7">
+                    <div class="mbr-section-btn text-center"><a href="contact .html" class="btn btn-secondary display-7">
                             EN SAVOIR +</a></div>
                 </div>
             </div>
@@ -736,10 +736,10 @@ pour réaliser vos ambitions avec passion.<br></p>
                 </div>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3"><a href="home.html" class="text-white">
+                <h5 class="pb-3"><a href="index.html" class="text-white">
                     Coachinglab.fr</a></h5>
                 <p class="mbr-text">
-                    <a href="apropos.html" class="text-info">A propos</a><br><a href="home.html#header11-78" class="text-info">Comment ca marche&nbsp;</a>?<br><br><a href="page9.html">Me contacter aujourd'hui &gt;</a><br></p>
+                    <a href="apropos.html" class="text-info">A propos</a><br><a href="index.html#header11-78" class="text-info">Comment ca marche&nbsp;</a>?<br><br><a href="contact .html">Me contacter aujourd'hui &gt;</a><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
@@ -749,7 +749,7 @@ pour réaliser vos ambitions avec passion.<br></p>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     Séances</h5>
-                <p class="mbr-text"><a href="rdvno1.html" class="text-secondary">&gt; ESSAYER &lt;</a><br><a href="offrez.html" class="text-secondary">&gt; OFFRIR &lt;</a><br><a href="page8.html" class="text-secondary">&gt; RESERVER votre SEANCE &lt;</a><br><br>Lun - Ven / 9 - 19h</p>
+                <p class="mbr-text"><a href="essai.html" class="text-secondary">&gt; ESSAYER &lt;</a><br><a href="offrez.html" class="text-secondary">&gt; OFFRIR &lt;</a><br><a href="rdv.html" class="text-secondary">&gt; RESERVER votre SEANCE &lt;</a><br><br>Lun - Ven / 9 - 19h</p>
             </div>
         </div>
         
@@ -771,7 +771,7 @@ pour réaliser vos ambitions avec passion.<br></p>
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
