--- a/offrez.html
+++ b/offrez.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/-logo-seul-clab1.gif" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/-logo-seul-clab-final.gif" type="image/x-icon">
   <meta name="description" content="Offrez des séances à vos proches">
   
   <title>OFFREZ des séances</title>
@@ -42,19 +42,19 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="home.html">
-                        <img src="assets/images/-logo-seul-clab1.gif" alt="" title="" style="height: 3.8rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="home.html">coachinglab.fr &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a>
-                </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="home.html"><span class="fa fa-home mbr-iconfont mbr-iconfont-btn"></span>&nbsp; &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="apropos.html">
+                    <a class="nav-link link text-secondary display-4" href="home.html">&nbsp;</a>
+                </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="index.html"><span class="fa fa-home mbr-iconfont mbr-iconfont-btn"></span>&nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="apropos.html">
                         A propos</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="home.html#header11-8m">
+                    <a class="nav-link link text-secondary display-4" href="index.html#header11-8m">
                         Comment ça marche ?</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="rdvno1.html">ESSAYER <br></a> <a class="btn btn-sm btn-success display-7" href="rdv.html">Réserver votre RDV</a></div>
@@ -111,7 +111,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
