--- a/personnel.html
+++ b/personnel.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/-logo-seul-clab1.gif" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/-logo-seul-clab-final.gif" type="image/x-icon">
   <meta name="description" content="GAGNEZ en clarté sur votre situation actuelle !
 Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous-même, à vos challenges quelque soit l'endroit où vous vous trouvez.">
   
@@ -44,19 +44,19 @@ Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="home.html">
-                        <img src="assets/images/-logo-seul-clab1.gif" alt="" title="" style="height: 3.8rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="home.html">coachinglab.fr &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a>
-                </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="home.html"><span class="fa fa-home mbr-iconfont mbr-iconfont-btn"></span>&nbsp; &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="apropos.html">
+                    <a class="nav-link link text-secondary display-4" href="home.html">&nbsp;</a>
+                </li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="index.html"><span class="fa fa-home mbr-iconfont mbr-iconfont-btn"></span>&nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-secondary display-4" href="apropos.html">
                         A propos</a></li>
                 <li class="nav-item">
-                    <a class="nav-link link text-secondary display-4" href="home.html#header11-8m">
+                    <a class="nav-link link text-secondary display-4" href="index.html#header11-8m">
                         Comment ça marche ?</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="rdvno1.html">ESSAYER <br></a> <a class="btn btn-sm btn-success display-7" href="rdv.html">Réserver votre RDV</a></div>
@@ -338,7 +338,7 @@ leurs réussites en fonction de vos besoins.</p>
     <div class="container">
         <div class="row main justify-content-center">
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-left py-4"><a class="btn btn-primary display-4" href="rdvno1.html">
+                <div class="mbr-section-btn align-left py-4"><a class="btn btn-primary display-4" href="essai.html">
                     ESSAYER MAINTENANT</a></div>
             </div>
             <div class="media-container-column title col-12 col-lg-7 col-md-6">
@@ -390,7 +390,7 @@ leurs réussites en fonction de vos besoins.</p>
                 <h2 class="align-left mbr-bold mbr-fonts-style display-4"><span style="font-weight: normal;">Le coaching en ligne est un moyen pour un plus grand nombre de personnes de recevoir un service précieux d’une manière différente, </span><br><span style="font-weight: normal;">qui correspond mieux à leurs besoins et à leurs attentes.</span></h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="rdvno1.html"><span class="mbri-touch-swipe mbr-iconfont mbr-iconfont-btn" style="font-size: 22px;"></span>ESSAYER MAINTENANT</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="essai.html"><span class="mbri-touch-swipe mbr-iconfont mbr-iconfont-btn" style="font-size: 22px;"></span>ESSAYER MAINTENANT</a></div>
             </div>
         </div>
     </div>
@@ -445,7 +445,7 @@ leurs réussites en fonction de vos besoins.</p>
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-    <input name="animation" type="hidden">
+  <input name="animation" type="hidden">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
