create github pages

--- a/contact .html
+++ b/contact .html
@@ -59,7 +59,7 @@ au  07.69.74.63.90">
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="home.html">
+                    <a href="index.html">
                         <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -208,7 +208,7 @@ au  07.69.74.63.90">
                     <div data-form-alert="" hidden="">Votre message a été transmis.
 Nous vous répondrons dans les meilleurs délais.</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3pIhbmBmNZT9YWJF3XR2bPb5n7Yf9IHEoUS3iPIxD6zvZQrHzypJYQwEBs2WvkZFZsFAfEELzgdfYeMoVCrnJmekicbPM9FMatO5HrxOqB2GLiMkwiyFzO5GHSQFgp0b.CXk31ctVk1tK/KY9zDVSPTXtXGBqmujvLqrpxstZl8Iw4TAuqaOJqo8niGAe6EjjIXzdueXMw80refjskYxk3PVbE7TbkxGT1e2fNEnsA/SZyKXA1/X7dis7+Z72a97n">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="q5CGomY+T3kYp6w0l1zOQdoZj9XDvbBUNLj4re5qrWPKVB4pVaXysE8UXLwFFgcFFMyzEpH4/Ye4S6Gz7zb0J56vFSmQqVP/+JImUNuG69hBeS4brUAZYlxYWYskvfLq.Th0GG0qTKcBgD1QWsjxFyJKiy2LzjTQlWuW+orvwRFZ3zfGjai/MNp7sxahz8FeFKfUcIRgcdhDFL945ZqmgNUB8dmU9chEeckPSJ7mcywAEs28rx1OMyObY12cDZo5d">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
