--- a/entreprise.html
+++ b/entreprise.html
@@ -58,7 +58,7 @@ pour innover et créer les succès futurs de votre entreprise .">
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="home.html">
+                    <a href="index.html">
                         <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
