--- a/jeunesse.html
+++ b/jeunesse.html
@@ -57,7 +57,7 @@ Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="home.html">
+                    <a href="index.html">
                         <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
