--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Nous sommes à vos cotés, où que vous soyez">
                         <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -88,8 +88,8 @@ Nous sommes à vos cotés, où que vous soyez">
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-figure" style="width: 70%;">
-                <img src="assets/images/rba-image-1118939.jpeg-1-1024x684-avec-logo-774x521.jpg" alt="" title="">
+            <div class="mbr-figure" style="width: 75%;">
+                <a href="index.html"><img src="assets/images/www.coachinglab.fr-1.gif" alt="" title=""></a>
             </div>
 
             <div class="media-content">
@@ -104,8 +104,8 @@ Nous sommes à vos cotés, où que vous soyez">
 <br>
 <br>En tant que coach, je vous accompagne à des moments clés, pour redéfinir vos priorités, évoluer, construire vos projets, atteindre vos objectifs et surtout croire en vos rêves.<br></p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-7" href="essai.html">&gt; Commencez maintenant<br>1ère Séance GRATUITE<br></a>
-                    <a class="btn btn-md btn-white-outline display-7" href="contact.html">EN SAVOIR +</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-7" href="essai.html">&gt; COMMENCEZ MAINTENANT<br>1ère Séance Gratuite<br></a>
+                    <a class="btn btn-md btn-white-outline display-7" href="contact.html">CONTACTEZ MOI</a></div>
             </div>
         </div>
     </div>
@@ -196,7 +196,7 @@ Nous sommes à vos cotés, où que vous soyez">
     <div class="container">
         <div class="row justify-content-center content-row">
             <div class="media-container-column title col-12 col-lg-7 col-md-6">
-                <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2"><strong>Solution PERSONNEL</strong></h3>
+                <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2"><strong><a href="personnel.html"><b>Solution PERSONNEL</b></a></strong></h3>
                 <h2 class="align-left mbr-bold mbr-fonts-style display-4"><span style="font-weight: normal;">vous permettra d'atteindre et dépasser vos objectifs</span><div><span style="font-weight: normal;">pour votre carrière, votre bonheur, votre santé et votre réussite</span></div></h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
@@ -292,7 +292,7 @@ Nous sommes à vos cotés, où que vous soyez">
     <div class="container">
         <div class="row justify-content-center content-row">
             <div class="media-container-column title col-12 col-lg-7 col-md-6">
-                <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2"><strong>Solution ENTREPRISE</strong></h3>
+                <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2"><a href="entreprise.html"><strong>Solution ENTREPRISE</strong></a></h3>
                 <h2 class="align-left mbr-bold mbr-fonts-style display-4"><span style="font-weight: normal;">permet aux entreprises de trouver les réponses appropriées et durables, de développer leur propre ingéniosité, le tout au service de l'amélioration des performances, de la réalisation des objectifs et de l'atteinte des résultats.</span></h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
