--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@ au  07.69.74.63.90">
                         <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -208,7 +208,7 @@ au  07.69.74.63.90">
                     <div data-form-alert="" hidden="">Votre message a été transmis.
 Nous vous répondrons dans les meilleurs délais.</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6oExC2fZiU0PFghiEiIKcUTGqWP1sL/3Ur+zLHg3ie7npJMib4SiemxBAGm2FS55Q488SELFjZEczueKply2XiP7mdwH9PzOeb15nCmyqSuUQOWneuf2mToSAbLHCjb7.K7BV5hSa8aFqNZdXf8pfBL0oyGCjXKFqL43yarni61cmelrgsfBrQPm4Ow7VbZt4yCvXbWUAjjBBpki7JhQAGPqHsmmSR+ighYHwGlo1ozRFXhMZBWKyK42OhY0BbvXT">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yL97yhvF1xFsIrkksEPX9AXFWaJIM+bfYJDtowgOh53/3aqkS4LRx4zSYDthh/zjUXXUUg0iCki0HZBxzy3RVQWl4FeATMw5UKsGnO0/36OLrqqX40Njb1M72BTWTbf1.IngvMeXzBBuiCfEEEw4NSqbnctAFSOEQ0iqaxijRvLQNKgrw6Pt4Y6qtbQbc9MEtERDO+IyA2we3O4l+jYWLQZllVwd8SmjdrDdGmRCwvF91V7u0IOp1DFeNuY1VTtGI">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
