--- a/rdv.html
+++ b/rdv.html
@@ -58,7 +58,7 @@
                         <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -103,7 +103,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 60%;">
-                <img src="assets/images/rba-image-1118939.jpeg-1-1024x684-avec-logo-774x521.jpg" alt="" title="">
+                <a href="index.html"><img src="assets/images/www.coachinglab.fr-1.gif" alt="" title=""></a>
             </div>
 
             <div class="media-content">
